# nautilus-wallet

./: .gitignore  404.html  README.md  index.html  nautilus-wallet.html  netlify.toml  print.html  searchindex.js  searchindex.json
asset-services/: .dockerignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  rust-toolchain.toml  rustfmt.toml
asset-services/asset-services-api/: Cargo.toml
asset-services/asset-services-api/src/: errors.rs  handlers.rs  helpers.rs  main.rs
asset-services/asset-services-api/src/handlers/: kyc.rs  messaging.rs  misc.rs  mod.rs  search.rs  verification.rs
asset-services/asset-services-celery/: Cargo.toml
asset-services/asset-services-celery/src/: celery_box.rs  exports.rs  lib.rs  run_helpers.rs  tasks.rs
asset-services/asset-services-celery/src/preflight/: checks.rs  mod.rs  types.rs
asset-services/asset-services-celery/src/task_records/: callbacks.rs  mod.rs  redis_helper.rs  redis_impl.rs  types.rs
asset-services/asset-services-celery/src/tasks/: kyc.rs  messaging.rs  misc.rs  mod.rs  search.rs  verification.rs
asset-services/asset-services-worker/: Cargo.toml
asset-services/asset-services-worker/src/: main.rs
asset-services/onfido/: Cargo.toml
asset-services/onfido/src/: client.rs  convert.rs  exports.rs  lib.rs  types.rs
asset-services/twilio-api/: Cargo.toml
asset-services/twilio-api/src/: client.rs  exports.rs  lib.rs  types.rs
asset-services/twilio-verify/: Cargo.toml
asset-services/twilio-verify/src/: client.rs  exports.rs  lib.rs  types.rs
asset-services/wallet-address-db-api/: Cargo.toml
asset-services/wallet-address-db-api/src/: client.rs  exports.rs  lib.rs  model.rs  types.rs
backend-services/: .dockerignore  .gitignore  Dockerfile  README.md  generate-dockerignore.sh  pyproject.toml  tox.ini
backend-services/src/auth_service/operations/: twilio_2fa.py
backend-services/src/auth_service/schema/: actions.py
backend-services/src/common/: __init__.py  settings.py  types.py
backend-services/src/data_service/: __init__.py  settings.py
backend-services/src/data_service/operations/: __init__.py  autofund.py  bookmark.py  dispatch.py  invite.py  otp.py  recurringpayment.py
backend-services/src/data_service/schema/: __init__.py  actions.py  entities.py  types.py  utils.py
backend-services/src/wallet_service/: __init__.py
backend-services/src/wallet_service/operations/: __init__.py  create_wallet.py  open_wallet.py
backend-services/src/wallet_service/schema/: __init__.py  actions.py  entites.py
backend-services/src/web_asgi/: __init__.py  main.py  settings.py
backend-services/tests/data_service/operations/: helpers.py  test_bookmark.py  test_dispatch.py  test_invite.py  utils.py
web-server/: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yaml  generate-Dockerfile.pdf.sh  generate-dockerignore.sh  rust-toolchain.toml
web-server/algorand_core/: Cargo.toml
web-server/algorand_core/src/: lib.rs
web-server/algorand_crypto/: Cargo.toml
web-server/algorand_crypto/src/: lib.rs
web-server/algorand_encoding/: Cargo.toml
web-server/algorand_encoding/src/: lib.rs
web-server/algorand_transaction/: Cargo.toml
web-server/algorand_transaction/src/: account.rs  api_model.rs  error.rs  lib.rs  transaction.rs  tx_group.rs
web-server/http-service-impl/: Cargo.toml
web-server/http-service-impl/src/: actors.rs  lib.rs  resources.rs  server.rs  traits.rs
web-server/http-service-impl/src/resources/: enclave_report.rs  mod.rs  wallet_operation.rs
web-server/sgx-helpers/: Cargo.toml
web-server/sgx-helpers/src/: status.rs
web-server/sgx-wallet/: .gitignore  Makefile  buildenv_sgx.mk
web-server/sgx-wallet-impl/: Cargo.toml
web-server/sgx-wallet-impl/src/: ecall_helpers.rs  lib.rs
web-server/sgx-wallet-impl/src/crypto/: common.rs  key_agreement.rs  mod.rs  sgx_get_key.rs
web-server/sgx-wallet-impl/src/ecalls/: enclave_create_report.rs  mod.rs  wallet_operation.rs
web-server/sgx-wallet-impl/src/ported/: attestation.rs  crypto.rs  mod.rs
web-server/sgx-wallet-impl/src/ported/kv_store/: mod.rs
web-server/sgx-wallet-impl/src/schema/: actions.rs  auth.rs  entities.rs  macros.rs  mod.rs  msgpack.rs  sealing.rs  serde_bytes_array.rs  session.rs  types.rs
web-server/sgx-wallet-impl/src/wallet_operations/: create_wallet.rs  dispatch.rs  errors.rs  generate_otp.rs  get_xrpl_wallet.rs  load_onfido_check.rs  mod.rs  new_transaction.rs  open_wallet.rs  pin_reset.rs  save_onfido_check.rs  sign_transaction.rs  sign_transaction_algorand.rs  sign_transaction_recurring_payment.rs  sign_transaction_xrp.rs  sign_transaction_xrpl.rs  store.rs  update_otp_number.rs
web-server/sgx-wallet-test/: Makefile  Makefile.toml
web-server/sgx-wallet-test/app/: Cargo.toml  Makefile
web-server/sgx-wallet-test/app/codegen/: Enclave_u.c  Enclave_u.h  Enclave_u.rs
web-server/sgx-wallet-test/app/src/: main.rs  safe_ecalls.rs
web-server/sgx-wallet-test/enclave/: Cargo.toml  Enclave.edl  Makefile
web-server/sgx-wallet-test/enclave/codegen/: Enclave_t.c  Enclave_t.h
web-server/sgx-wallet-test/enclave/src/: lib.rs
web-server/sgx-wallet-test/enclave/src/helpers/: algonaut.rs  mod.rs  temp_dir.rs  wallet_store.rs
web-server/sgx-wallet-test/enclave/src/ported/: mod.rs  proptest_crypto.rs  test_attestation.rs  test_crypto.rs  test_kv_store.rs  test_kv_store_fs.rs
web-server/sgx-wallet-test/enclave/src/schema/: mod.rs  test_sealing.rs  test_types.rs
web-server/sgx-wallet-test/enclave/src/wallet_operations/: mod.rs  test_create_wallet.rs  test_dispatch.rs  test_get_xrpl_wallet.rs  test_load_onfido_check.rs  test_open_wallet.rs  (+8 more)
web-server/sgx-wallet/app/: Cargo.toml  Makefile  build.rs
web-server/sgx-wallet/app/codegen/: Enclave_u.c  Enclave_u.h  Enclave_u.rs
web-server/sgx-wallet/app/src/: main.rs  safe_ecalls.rs  trait_impls.rs
web-server/sgx-wallet/enclave/: Cargo.toml  Enclave.edl  Makefile
web-server/sgx-wallet/enclave/codegen/: Enclave_t.c  Enclave_t.h
web-server/sgx-wallet/enclave/src/: lib.rs
(+881 files in other folders)
