[workspace]

members = [
    'asset-services-api',
    'asset-services-celery',
    'asset-services-worker',
    'onfido',
    'twilio-verify',
]


[patch.crates-io]
# XXX(Pi): Upstream PR: Add Cors for setting CORS headers
#          <https://github.com/tower-rs/tower-http/pull/112>
tower-http = { git = "https://github.com/tower-rs/tower-http", branch = "cors" }
