[tool.poetry]
name = "wallet-backend-services"
version = "0.1.0"
description = ""
authors = ["Nautilus"]
readme = "README.md"
packages = [
         {include = "common", from = "src"},
         {include = "data_service", from = "src"},
         {include = "web_asgi", from = "src"},
         {include = "tests"},
         ]

[tool.poetry.dependencies]
python = "^3.10"
motor = "^3.1.1"
fastapi = "^0.87.0"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
gunicorn = "^20.1.0"
odmantic = "^0.9.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
mock = "^4.0.3"
pytest-asyncio = "^0.20.2"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.10.0"
tox = "^3.27.1"
tox-poetry-installer = {extras = ["poetry"], version = "^0.10.0"}
isort = "^5.10.1"
bandit = "^1.7.4"
rich = "^12.6.0"
devtools = "^0.9.0"
pdoc = "^12.3.0"
flake8 = "^6.0.0"
ruff = "^0.0.166"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.ruff]
# start with the rules used by `fastapi`
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
# start with the ignores used by `fastapi`
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
# our additional lint checks
extend-select = [
    "UP", # modern syntax
    "N", # naming conforms to PEP8
    "ANN", # type annotations
    "BLE", # blind exceptions
    "FBT", # booleans traps
    "A", # clashes with python builtins
    "T", # left-over debugging
    "Q", # uniform quotes
    "RET", # function returns
    "I25", # tidy imports
    "ERA", # commented code
    "PLC", # pylint checks
    "RUF", # ruff-specific checks
]
# Assume Python 3.10.
target-version = "py310"
