[package]
name = "web-server"
version = "0.1.0"
authors = ["Tsundzukani <trnghondzweni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "algorand_core",
    "algorand_transaction",
]

[dependencies]
algorand_core = {path = "algorand_core", version = "0.1.0"}
algorand_transaction = {path = "algorand_transaction", version = "0.1.0"}

[dev-dependencies]
