[package]
name = "asset-services-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2"
log = "0.4"
tokio = { version = "1", features = ["macros"] }

asset-services-celery = { path = "../asset-services-celery" }
