[package]
name = "asset-services-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.2"
log = "0.4"
serde = "1.0"
tokio = { version = "1", features = ["macros"] }

env-var-helpers = { git = "https://github.com/PiDelport/rust-env-var-helpers" }

asset-services-celery = { path = "../asset-services-celery" }
