[package]
name = "asset-services-celery"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
url = "2"

# We want the 0.4 pre-release, for Redis broker support.
celery = "0.4.0-rc10"
# The celery::task macro requires serde here.
serde = "1.0"

env-var-helpers = { git = "https://github.com/PiDelport/rust-env-var-helpers" }
