[package]
name = "asset-services-celery"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.9"
log = "0.4"
strum = { version = "0.21", features = ["derive"] }
thiserror = "1.0"
url = "2"

# See: feat(error): derive Serialize, Deserialize for TaskError #274
#      https://github.com/rusty-celery/rusty-celery/pull/274
celery = { git = "https://github.com/PiDelport/rusty-celery", branch = "feat-task-error-derive-serde" }
# The celery::task macro requires serde here.
serde = "1.0"

# For our task_records backend
chrono = "*"
redis = "*"
serde_json = "*"
tokio = "*"

env-var-helpers = { git = "https://github.com/PiDelport/rust-env-var-helpers" }
onfido = { path = "../onfido" }
twilio-api = { path = "../twilio-api" }
twilio-verify = { path = "../twilio-verify" }
