[package]
name = "asset-services-worker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros"] }

asset-services-celery = { path = "../asset-services-celery" }
