[package]
name = "onfido"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isocountry = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

env-var-helpers = { git = "https://github.com/PiDelport/rust-env-var-helpers" }
onfido-openapi = { git = "https://github.com/PiDelport/onfido-openapi-rust", branch = "feat-spec-2.1.0-beta" }
