[package]
name = "wallet-address-db-api"
version = "0.1.0"
authors = ["Nautilus team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3"
bson = "2.4"
serde = { version = "1.0", features = ["derive"] }

env-var-helpers = { git = "https://github.com/PiDelport/rust-env-var-helpers" }
