[package]
name = "algorand_crypto"
version = "0.1.0"
authors = ["Tsundzukani <trnghondzweni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algorand_encoding = {path = "../algorand_encoding", version = "0.1.0"}
data-encoding = {version = "2.3.1", default-features = false}
serde = {version = "1.0", features = ["derive"], default-features = false}
