[package]
name = "algorand_encoding"
version = "0.1.0"
authors = ["Tsundzukani <trnghondzweni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3.1"
serde = {version = "1.0", features = ["derive"]}