[package]
name = "algorand_transaction"
version = "0.1.0"
authors = ["Tsundzukani <trnghondzweni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algorand_core = {path = "../algorand_core", version = "0.1.0"}
ring = "0.16.19"
rand = "0.8.3"
