[package]
name = "algorand_transaction"
version = "0.1.0"
authors = ["Tsundzukani <trnghondzweni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algorand_core = {path = "../algorand_core", version = "0.1.0"}
ring = {version = "0.16.19", default_features = false}
rand = {version = "0.7.3", default_features = false}
