[package]
name = "sgx-wallet-impl"
version = "0.1.0"
authors = ["Nautilus team"]
license = "Apache-2.0"

edition = "2021"

[lib]
bench = false
test = false

[dependencies]
# no_std
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
secrecy = "0.8.0"
sodalite = { version = "0.4.0", default-features = false }
zeroize = { version = "1.4.1", features = ["alloc", "zeroize_derive"] }

# SGX SDK
sgx_tcrypto = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_tse = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }

# Community SGX forks
rand = { git = "https://github.com/mesalock-linux/rand-sgx" }
rmp-serde = { git = "https://github.com/mesalock-linux/msgpack-rust-sgx" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
thiserror = { git = "https://github.com/mesalock-linux/thiserror-sgx" }

# Our SGX forks
algonaut = { git = "https://github.com/registreerocks/algonaut-sgx", branch = "main-sgx" }
serde_bytes = { version = "0.11.4", git = "https://github.com/registreerocks/serde-bytes-sgx" } # SGX: registreerocks fork for 0.11.4

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_libc = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_trts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
