[package]
# name matches APP_U in Makefile
name = "sgx-wallet-test-app"
version = "0.1.0"
authors = ["Nautilus team"]
license = "Apache-2.0"

edition = "2018"
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "863378876c55025084572e22554bbedd57eead97" }
sgx_urts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "863378876c55025084572e22554bbedd57eead97" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
