[package]
# name matches APP_U in Makefile
name = "sgx-wallet-test-app"
version = "0.1.0"
authors = ["Nautilus team"]
license = "Apache-2.0"

edition = "2021"
build = "build.rs"

[dependencies]
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_urts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
