[package]
# name matches ENCLAVE_CARGO_LIB in Makefile
name = "sgx-wallet-test-enclave"
version = "0.1.0"
authors = ["Nautilus team"]
license = "Apache-2.0"

edition = "2021"

[lib]
crate-type = ["staticlib"]
bench = false
test = false

[features]
default = []

[dependencies]
# no_std
secrecy = "0.8.0"
sodalite = { version = "0.4.0", default-features = false }

# SGX SDK
sgx_rand = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_tcrypto = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", features = ["backtrace"], rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_tunittest = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }

# Community SGX forks
rmp-serde = { git = "https://github.com/mesalock-linux/msgpack-rust-sgx" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx" }

# Our SGX forks
algonaut = { git = "https://github.com/registreerocks/algonaut-sgx", branch = "main-sgx" }

sgx-wallet-impl = { path = "../../sgx-wallet-impl" }

# Test-only
# Docs: https://altsysrq.github.io/proptest-book/proptest/no-std.html
proptest = { version = "1.0.0", default-features = false, features = ["alloc", "hardware-rng"] }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_libc = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_trts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "e8a9fc22939befa27ff67f5509b2c2dfe8499945" }
