[package]
# name matches ENCLAVE_CARGO_LIB in Makefile
name = "sgx-wallet-enclave"
version = "0.1.0"
authors = ["Nautilus team"]
license = "Apache-2.0"

edition = "2018"

[lib]
crate-type = ["staticlib"]
test = false

[features]
default = []

[dependencies]
# SGX SDK
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "863378876c55025084572e22554bbedd57eead97" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", features = ["backtrace"], rev = "863378876c55025084572e22554bbedd57eead97" }

sgx-wallet-impl = { path = "../../sgx-wallet-impl" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_libc = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "863378876c55025084572e22554bbedd57eead97" }
sgx_trts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "863378876c55025084572e22554bbedd57eead97" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "863378876c55025084572e22554bbedd57eead97" }
