[package]
# name matches ENCLAVE_CARGO_LIB in Makefile
name = "sgx-wallet-enclave"
version = "0.1.0"
authors = ["Nautilus team"]
license = "Apache-2.0"

edition = "2021"

[lib]
crate-type = ["staticlib"]
bench = false
test = false

[features]
default = []

[dependencies]
# SGX SDK
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "565960cd7b4b36d1188459d75652619971c43f7e" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", features = ["backtrace"], rev = "565960cd7b4b36d1188459d75652619971c43f7e" }

sgx-wallet-impl = { path = "../../sgx-wallet-impl" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_libc = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "565960cd7b4b36d1188459d75652619971c43f7e" }
sgx_trts = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "565960cd7b4b36d1188459d75652619971c43f7e" }
sgx_tstd = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", rev = "565960cd7b4b36d1188459d75652619971c43f7e" }
